[gd_scene load_steps=32 format=3 uid="uid://bv0apbjda28cv"]

[ext_resource type="Script" path="res://scenes/player/gui.gd" id="1_gy8ea"]
[ext_resource type="Shader" path="res://scenes/player/perspective.gdshader" id="2_gmlob"]
[ext_resource type="Script" path="res://scenes/player/bar.gd" id="3_f26hd"]
[ext_resource type="Texture2D" uid="uid://qtt3bxdf0gb7" path="res://assets/player/Stab-1.png" id="3_rl3ji"]
[ext_resource type="Texture2D" uid="uid://umqjll8l5m6p" path="res://assets/player/Stab-2.png" id="4_q6x1i"]
[ext_resource type="Texture2D" uid="uid://cbmkeid3uwx0u" path="res://assets/player/Stab-3.png" id="5_tea6t"]
[ext_resource type="Texture2D" uid="uid://dd3i51bq6pq21" path="res://assets/player/Stab-4.png" id="6_7py8v"]
[ext_resource type="Texture2D" uid="uid://d0023d5ivruoi" path="res://assets/player/SelfStab-1.png" id="8_1i7da"]
[ext_resource type="Texture2D" uid="uid://c06f7wa257mes" path="res://assets/player/SelfStab-2.png" id="9_o1q21"]
[ext_resource type="Texture2D" uid="uid://dfbvrro36hhst" path="res://assets/player/SelfStab-3.png" id="10_16ygi"]
[ext_resource type="Texture2D" uid="uid://dxv2nf0cajmhj" path="res://assets/player/SelfStab-4.png" id="11_l1nfr"]
[ext_resource type="Texture2D" uid="uid://jdpf0tx0khx3" path="res://assets/player/SelfStab-5.png" id="12_2wdac"]
[ext_resource type="Texture2D" uid="uid://ce1ydtkkqyk0d" path="res://assets/player/SelfStab-6.png" id="13_kk4c3"]
[ext_resource type="Texture2D" uid="uid://b5a4t62mse80c" path="res://assets/player/SelfStab-7.png" id="14_g4xwe"]
[ext_resource type="Texture2D" uid="uid://cua4ggivg4jij" path="res://assets/player/SelfStab-8.png" id="15_15kf4"]
[ext_resource type="Texture2D" uid="uid://c3jdeitoptkx5" path="res://assets/player/SelfStab-9.png" id="16_8a225"]
[ext_resource type="Texture2D" uid="uid://dnsusy5f8rovq" path="res://assets/player/SelfStab-10.png" id="17_a3eli"]
[ext_resource type="Texture2D" uid="uid://pvcmt0sy4vse" path="res://assets/player/SelfStab-11.png" id="18_uqb4c"]
[ext_resource type="Texture2D" uid="uid://bgpo2t2ebrnc1" path="res://assets/player/SelfStab-12.png" id="19_57vv1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r3yg4"]
shader = ExtResource("2_gmlob")
shader_parameter/isInRadians = false
shader_parameter/xRadians = 0.0
shader_parameter/yRadians = null
shader_parameter/zRadians = null
shader_parameter/xDegrees = 340.0
shader_parameter/yDegrees = 20.0
shader_parameter/zDegrees = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xwv3u"]
shader = ExtResource("2_gmlob")
shader_parameter/isInRadians = false
shader_parameter/xRadians = null
shader_parameter/yRadians = null
shader_parameter/zRadians = null
shader_parameter/xDegrees = 340.0
shader_parameter/yDegrees = 20.0
shader_parameter/zDegrees = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2gpi7"]
shader = ExtResource("2_gmlob")
shader_parameter/isInRadians = false
shader_parameter/xRadians = null
shader_parameter/yRadians = null
shader_parameter/zRadians = null
shader_parameter/xDegrees = 340.0
shader_parameter/yDegrees = 340.0
shader_parameter/zDegrees = null

[sub_resource type="SpriteFrames" id="SpriteFrames_yxpgc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_rl3ji")
}, {
"duration": 1.0,
"texture": ExtResource("4_q6x1i")
}, {
"duration": 1.0,
"texture": ExtResource("5_tea6t")
}, {
"duration": 1.0,
"texture": ExtResource("6_7py8v")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_1i7da")
}, {
"duration": 1.0,
"texture": ExtResource("9_o1q21")
}, {
"duration": 1.0,
"texture": ExtResource("10_16ygi")
}, {
"duration": 1.0,
"texture": ExtResource("11_l1nfr")
}, {
"duration": 1.0,
"texture": ExtResource("12_2wdac")
}, {
"duration": 1.0,
"texture": ExtResource("13_kk4c3")
}, {
"duration": 1.0,
"texture": ExtResource("14_g4xwe")
}, {
"duration": 1.0,
"texture": ExtResource("15_15kf4")
}, {
"duration": 1.0,
"texture": ExtResource("16_8a225")
}, {
"duration": 1.0,
"texture": ExtResource("17_a3eli")
}, {
"duration": 1.0,
"texture": ExtResource("18_uqb4c")
}, {
"duration": 1.0,
"texture": ExtResource("19_57vv1")
}],
"loop": true,
"name": &"self_attack",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_simaa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlashPos:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.535144, 0.470246, 0.286275)]
}

[sub_resource type="Animation" id="Animation_2hpkd"]
resource_name = "flash_neg"
length = 0.04
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlashPos:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0.533333, 0.470588, 0), Color(0.270588, 0, 0, 0.203922), Color(1, 0.533333, 0.470588, 0)]
}

[sub_resource type="Animation" id="Animation_bsvqb"]
resource_name = "flash_pos"
length = 0.04
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlashPos:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0.533333, 0.470588, 0), Color(1, 0.729412, 0.686275, 0.117647), Color(1, 0.533333, 0.470588, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1l4u5"]
_data = {
"RESET": SubResource("Animation_simaa"),
"flash_neg": SubResource("Animation_2hpkd"),
"flash_pos": SubResource("Animation_bsvqb")
}

[sub_resource type="Animation" id="Animation_pdrd0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hand/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_sds40"]
resource_name = "attack"
length = 0.16
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hand/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.08),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"emit_attack_frame"
}]
}

[sub_resource type="Animation" id="Animation_sb5ug"]
resource_name = "self_attack"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hand/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"self_attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"emit_attack_frame"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8mmeg"]
_data = {
"RESET": SubResource("Animation_pdrd0"),
"attack": SubResource("Animation_sds40"),
"self_attack": SubResource("Animation_sb5ug")
}

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_gy8ea")

[node name="adrenaline_bar" type="ProgressBar" parent="."]
material = SubResource("ShaderMaterial_r3yg4")
layout_mode = 0
offset_left = 33.0
offset_top = 828.0
offset_right = 433.0
offset_bottom = 888.0
scale = Vector2(1.2, 1.2)
show_percentage = false
script = ExtResource("3_f26hd")
shake_intensity = 7.0

[node name="Label" type="Label" parent="adrenaline_bar"]
use_parent_material = true
layout_mode = 0
offset_left = 11.0
offset_top = -3.0
offset_right = 354.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 48
text = "adrenaline-bar
"

[node name="adrenaline_timer" type="Timer" parent="adrenaline_bar"]
wait_time = 0.5

[node name="health_bar" type="ProgressBar" parent="."]
material = SubResource("ShaderMaterial_xwv3u")
layout_mode = 0
offset_left = 33.0
offset_top = 920.0
offset_right = 433.0
offset_bottom = 980.0
scale = Vector2(1.2, 1.2)
show_percentage = false
script = ExtResource("3_f26hd")
shake_intensity = 7.0

[node name="Label" type="Label" parent="health_bar"]
use_parent_material = true
layout_mode = 0
offset_left = 19.0
offset_top = -6.0
offset_right = 362.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 48
text = "health-bar
"

[node name="combo_meter" type="Control" parent="."]
material = SubResource("ShaderMaterial_2gpi7")
anchors_preset = 0
offset_left = 1524.0
offset_top = -2.0
offset_right = 1720.0
offset_bottom = 131.0
scale = Vector2(2, 2)
script = ExtResource("3_f26hd")
shake_intensity = 7.0

[node name="Label" type="Label" parent="combo_meter"]
use_parent_material = true
layout_mode = 2
offset_left = 26.0
offset_top = 12.0
offset_right = 118.0
offset_bottom = 51.0
theme_override_font_sizes/font_size = 28
text = "combo"

[node name="Label2" type="Label" parent="combo_meter"]
use_parent_material = true
layout_mode = 2
offset_left = 126.0
offset_top = 60.0
offset_right = 189.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 28

[node name="combo_timer" type="Timer" parent="combo_meter"]
wait_time = 3.0

[node name="hand" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
script = ExtResource("3_f26hd")
shake_intensity = 7.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="hand"]
position = Vector2(-960, -541)
sprite_frames = SubResource("SpriteFrames_yxpgc")
animation = &"attack"

[node name="FlashPos" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.535144, 0.470246, 0.286275)

[node name="FlashAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1l4u5")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8mmeg")
}

[connection signal="timeout" from="adrenaline_bar/adrenaline_timer" to="." method="_on_adrenaline_timer_timeout"]
[connection signal="timeout" from="combo_meter/combo_timer" to="." method="_on_combo_timer_timeout"]
